# docs/swagger.json
@@ -11,6 +11,43 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/import_redem": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Upload file excel data redem",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "FileUpload"
+                ],
+                "summary": "Import Redem",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Data Redem",
+                        "name": "import_redem",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/tool.ResponseModel"
+                        }
+                    }
+                }
+            }
+        },
         "/web/patner/patner_master": {
             "get": {
                 "security": [
