# routes/routes.go
@@ -9,6 +9,9 @@ import (
 	_repoPatnerMaster "nuryanto2121/cukur_in_web/repository/patner_master"
 	_usePatnerMaster "nuryanto2121/cukur_in_web/usecase/patner_master"
 
+	_contImportRedem "nuryanto2121/cukur_in_web/controllers/import_redem"
+	_useImportRedem "nuryanto2121/cukur_in_web/usecase/import_redem"
+
 	"nuryanto2121/cukur_in_web/pkg/setting"
 	"time"
 
@@ -26,5 +29,8 @@ func (e *EchoRoutes) InitialRouter() {
 	repoPatnerMaster := _repoPatnerMaster.NewRepoPatnerMaster(postgresgorm.Conn)
 	usePatnerMaster := _usePatnerMaster.NewUsePatnerMaster(repoPatnerMaster, timeoutContext)
 	_contPatnerMaster.NewContPatnerMaster(e.E, usePatnerMaster)
+
+	useImportRedem := _useImportRedem.NewImportRedem(postgresgorm.Conn, timeoutContext)
+	_contImportRedem.NewContFileUpload(e.E, useImportRedem)
 
 }
